k8s/infrastructure/monitoring/grafana-operator/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-operator
  namespace: grafana
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: grafana-operator}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8081', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '9090', protocol: TCP}]]}  # Prometheus
  egress:
    - {toEntities: [kube-apiserver]}
    - {toEndpoints: [matchLabels: {app: grafana, k8s:io.kubernetes.pod.namespace: grafana}], toPorts: [ports: [{port: '3000', protocol: TCP}]]}  # Grafana API
    - {toFQDNs: [{matchName: grafana.com}, {matchName: raw.githubusercontent.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}  # grafanaCom dashboard fetch
